@@ -1,3 +1,8 @@
+2005-01-04  Peter Bartok <pbartok@novell.com>
+
+	* TextControl.cs: Switched Line, LineTag and Document classes to 
+	  internal
+
 2005-01-04  Jordi Mas i Hernandez <jordi@ximian.com>
 
 	* ComboBox.cs, ThemeWin32Classic.cs, ListBox.cs, Theme.cs:
